- 
    Bug 
- 
    Resolution: Done
- 
     Not Evaluated Not Evaluated
- 
    Qt Creator 2.4.0
- 
    MacOS X 10.6.8, Win7 SP1
- 
        354b51fda0037b611f4c0b5d8c00f1c3fa571b9a
Steps to reproduce:
- open a QML file and make sure the Outline is shown in Edit view.
- make sure, the editor has no focus (set focus on recent search result or project files TreeView)
- click on an item inside the Outline
Expected result:
- editor switches to the according line and gets the focus
Current result:
- editor switches to the according line but doesn't get focus (you can see the line only by the bolded line number)
Works as expected when editor has the focus when clicking into the Outline.