Set focus to the editor after selection change in outline

Task-number: QTCREATORBUG-6306
Change-Id: Ia60193ba2c4204532798fb4f7eade434d7510ff5
Reviewed-by: Leandro Melo <leandro.melo@nokia.com>